# RGPChord

./: .gitmodules  CMakeLists.txt  Chord.h  ChordData.cpp  ChordData.h  ChordNode.cpp  Makefile.osx  README.md
example/: example.cpp  example.h
include/rgp/: Chord  Chord.h  ChordData.h  ChordNode.h  ChordTypes.h
source/: Chord.cpp  Makefile.osx  test.cpp
src/: Chord.cpp  ChordData.cpp  ChordNode.cpp
test/: start4Nodes.sh  startFirstNode.sh
test-scripts/: start8Nodes.sh  startSecondNode.sh
